<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inverse_dynamics_solver</name>
  <version>2.0.1</version>
  <description>A library implementing an inverse dynamics solver for serial manipulators.</description>
  <url>https://github.com/unisa-acg/inverse-dynamics-solver.git</url>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <author email="vipetrone@unisa.it">Vincenzo Petrone</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_storage_default_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>

  <exec_depend>python-argparse</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-tabulate</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
